--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,9 +1,9 @@
 {
   "apps": [{
-    "serverURL": "",
-    "appId": "",
-    "masterKey": "",
-    "appName": "",
+    "serverURL": process.env.SERVER_URL,
+    "appId": process.env.APP_ID,
+    "masterKey": process.env.MASTER_KEY,
+    "appName": process.env.APP_NAME,
     "iconName": ""
   }],
   "iconsFolder": "icons"
