--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,3 +1,10 @@
 {
+  "apps": [{
+    "serverURL": process.env.SERVER_URL,
+    "appId": process.env.APP_ID,
+    "masterKey": process.env.MASTER_KEY,
+    "appName": process.env.APP_NAME,
+    "iconName": ""
+  }],
   "iconsFolder": "icons"
 }
